apps/media/tautulli/networkpolicies/egress-tautulli.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-tautulli
  namespace: media
spec:
  selector: app == 'tautulli'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 443
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'plex'
        ports:
          - 32400
