apps/media/tautulli/networkpolicies/ingress-nginx-egress-tautulli.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-tautulli
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: tautulli
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
