apps/media/tautulli/networkpolicies/nginx-egress-tautulli.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress-tautulli
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toServices:
        - k8sService:
            serviceName: tautulli
            namespace: media
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
