apps/media/tautulli/networkpolicies/tautulli.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tautulli
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: tautulli
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            "k8s:io.kubernetes.pod.namespace": ingress-nginx
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: plex
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toFQDNs:
        - matchName: api.github.com
        - matchName: ghcr.io # catppuccin theme
        - matchName: pkg-containers.githubusercontent.com # catppucin theme
        - matchName: plex.tv
        - matchName: raw.githubusercontent.com # catppuccin theme
        - matchName: secure.gravatar.com
        - matchName: tautulli.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
